patp/router updates, etc.

--- a/app/style.css
+++ b/app/style.css
@@ -1,4 +1,4 @@
-/* Author: Anna Hyer Spring 2023 Class: Intro to Programming */
+/* Author: Anna Hyer Spring 2023 Class: Fundamentals of Software Engineering */
 
 /*colors, layout, etc.*/
 body {
