--- a/app/templates/style.css
+++ b/app/templates/style.css
@@ -3,7 +3,7 @@
 /*colors, layout, etc.*/
 body {
     /*background-color: rgb(73, 111, 90),*/
-    background-image: url("olena-shmahalo-RAmE69dtnIw-unsplash.jpg");
+    /*background-image: url("olena-shmahalo-RAmE69dtnIw-unsplash.jpg");*/
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
