--- a/app/templates/seedvault.html
+++ b/app/templates/seedvault.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "index.html" %}   <!--Jinja notation-->
 {% block seedvault %}
     <a href="{{ url_for(name= 'test_show_main', path= '/app/routers/gardenpathop.py') }}"></a>      <!--link to seedvault page-->
     
