db_interface.html modified import nae to fit directory integration

--- a/app/templates/db_interface.html
+++ b/app/templates/db_interface.html
@@ -1,7 +1,7 @@
 <!-- Alexander Flores Spring 2023 CS320-->
 <!-- This website was made with the help of w3schools.com-->
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 <html lang='en-US'>
 
 <head>
@@ -117,5 +117,5 @@ new Chart("myChart", {
 });
 </script>
 
-<script src="script.js">
+<script src="script2.js">
 </script>
