--- a/app/templates/db_interface.html
+++ b/app/templates/db_interface.html
@@ -1,12 +1,12 @@
 <!-- Alexander Flores Spring 2023 CS320-->
 <!-- This website was made with the help of w3schools.com-->
 <!DOCTYPE html>
-<link rel="stylesheet" href="{{ url_for('templates', path='style2.css') }}">
+<link rel="stylesheet" href="{{ url_for('templates', path='/style2.css') }}">
 <html lang='en-US'>
 
 <head>
 	<title>Arduino Data</title>
-	<link rel="icon" type="image/x-icon" href="{{ url_for('templates', path='plant.png') }}">
+	<link rel="icon" type="image/x-icon" href="{{ url_for('templates', path='/plant.png') }}">
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +15,9 @@
 <body>
 	<div>
 		<ul>
-			<li> <a href="#"> <b>Home</b></a></li>
-			<li> <a href="#"><b>Sensors </b></a></li>
-			<li> <a href="#"><b>Climate</b></a></li>
+			<li> <a href="/"> <b>Home</b></a></li>
+			<li> <a href="/sensors"><b>Sensors </b></a></li>
+			<li> <a href="/climate"><b>Climate</b></a></li>
 			<li style="float:right"> <a href="#"><b>About</b></a></li>
 		</ul>
 	</div>
@@ -68,9 +68,10 @@
 			display = "none"
 			 new_width = 200;
 		} else if (form == "data") {
-			makeGraph();
+			makeGraph(data);
 			new_width = 350;
 		} else {
+			display = "none"
 			new_width = 500;
 		}
 		document.getElementsByClassName('data_table')[0].style.width = new_width;
@@ -111,27 +112,78 @@ function changeData(event) {
 }
 
 
-function makeGraph() {
+function makeGraph(data) {
+	const sensor_names = [];
+	const sensor_data = {};
+
+	for (row in data) {
+		let sensor  = data[row]['Sensor Name'];
+		let d		= data[row]['Data'];
+
+		if (!sensor_names.includes(sensor)) {
+			sensor_names.push(sensor);
+			sensor_data[sensor] = [d];
+		} else {
+			sensor_data[sensor].push(d);
+		}
+	}
+	
+	let length = 0;
+	let datasets = [];
+	const colors = ["red","green","blue","yellow","black","grey","orange", "violet"];
+	let color_index = 0;
+
+	for (row in sensor_data) {
+		const d = sensor_data[row];
+		if (length < d.length) {
+			length = d.length;
+		}
+
+		datasets.push(
+			{ 
+    	label: row,
+      data: sensor_data[row],
+      borderColor: colors[color_index],
+      fill: false
+    });
+
+
+		if (color_index >= colors.length) {
+			color_index = 0;
+		} else {
+			color_index++;
+		}
+
+	}
+
+
+	if (length == 0) {
+		return;
+	}
+
+	const labels = [];
+	const evenSeconds = 1;
+	const oddSeconds = 2;
+	let total = 0;
+
+	for (let i = 0; i < length; i++) {
+		if (i % 2 == 0) {
+			labels.push("Second " + total);
+			total += evenSeconds;
+		} else {
+			labels.push("Second " + total);
+			total += oddSeconds;
+		}
+
+	}
+
+	console.log(sensor_data);
+
 	new Chart("myChart", {
   type: "line",
   data: {
-    labels: ["Day 1","Day 2","Day 3","Day 4","Day 5","Day 6","Day 7","Day 8","Day 9","Day 10"],
-    datasets: [{ 
-    	label: 'DHT_Humidity',
-      data: [860,1140,1060,1060,1070,1110,1330,2210,7830,2478],
-      borderColor: "red",
-      fill: false
-    }, { 
-    	label: 'DHT_Temperatire',
-      data: [1600,1700,1700,1900,2000,2700,4000,5000,6000,7000],
-      borderColor: "green",
-      fill: false
-    }, { 
-    	label: 'Temperature',
-      data: [300,700,2000,5000,6000,4000,2000,1000,200,100],
-      borderColor: "blue",
-      fill: false
-    }]
+    labels: labels,
+    datasets: datasets
   },
   options: {
     legend: {display: true},
@@ -142,12 +194,6 @@ function makeGraph() {
 
 }
 
-//<th>Sensor Name </th><th>Data</th><th>Location</th><th>Date</th></tr>";
-
-// str +=  "<tr><td>" + data[i]['name'] 	 + "</td>" +
-			// 						"<td>" + data[i]['data'] + "</td>" +
-			// 						"<td>" + data[i]['loc']  + "</td>" +
-			// 						"<td>" + data[i]['date'] + "</td></tr>";
 </script>
 
 
