--- a/app/templates/json_data.html
+++ b/app/templates/json_data.html
@@ -30,7 +30,6 @@
   background-color: #dddddd;
   width: 70%;
   align-items: stretch;
-  align
 }
 
 </style>
@@ -41,7 +40,7 @@
 			<li> <a href="/"> <b>Home</b></a></li>
 			<li> <a href="/sensors"><b>Sensors </b></a></li>
 			<li> <a href="/climate"><b>Climate</b></a></li>
-			<li style="float:right"> <a href="#"><b>About</b></a></li>
+			<li style="float:right;"> <a href="#"><b>About</b></a></li>
 		</ul>
 	</div>
 	<hr>
